# TestXPathWithXercesAndXalan

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
lib/: CMakeLists.txt
lib/xalan-c-1.12.0/: CMakeLists.txt
lib/xalan-c-1.12.0/cmake/: XalanThreadSelection.cmake  XalanTranscoderSelection.cmake  XalanXerces.cmake
lib/xalan-c-1.12.0/samples/EntityResolver/: EntityResolver.cpp
lib/xalan-c-1.12.0/samples/SimpleXPathAPI/: SimpleXPathAPI.cpp
lib/xalan-c-1.12.0/src/xalanc/: CMakeLists.txt
lib/xalan-c-1.12.0/src/xalanc/PlatformSupport/: ProblemListenerBase.cpp  ProblemListenerBase.hpp
lib/xalan-c-1.12.0/src/xalanc/Utils/: CMakeLists.txt
lib/xalan-c-1.12.0/src/xalanc/Utils/MsgCreator/: CMakeLists.txt
lib/xalan-c-1.12.0/src/xalanc/Utils/XalanMsgLib/: CMakeLists.txt  XalanMsgLib.rc
lib/xalan-c-1.12.0/src/xalanc/XSLT/: XalanParamHolder.hpp
lib/xerces-c-3.2.2/: CMakeLists.txt
test_xalan_dom/: CMakeLists.txt  TestXalanDom.cpp
test_xpath_xalan/: CMakeLists.txt  test_xpath_xalan.cpp  test_xpath_xalan.h
